# lazarus

./: .gitignore  Cargo.toml  Makefile  clean.bash  notes.org
src/: ast.rs  calculator1.lalrpop  env.rs  eval.rs  frame.rs  lexer.rs  lib.rs  main.rs  node.rs  obj.rs  parser.rs  token.rs  types.rs
test-cases/: cycle.scm  fact-iter.scm  fact.scm  map.scm  mul.scm  object1.scm  unicode-map.scm
