[package]
name = "lazarus"
version = "0.1.0"
authors = ["Derek <physci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
# nom = "5.0.1"
file-descriptors = "0.8.7"
unicode_reader = "1.0.0"
regex = "1.3.1"